Changed Dockerfile